Bug 1681671 - Ensure we clear cached DMABuf textures during an NVIDIA video memory device reset. r=sotaro

Differential Revision: https://phabricator.services.mozilla.com/D99597